Shang New Live/src/objects/Units__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorised_Person_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Manager&apos;s contact information.</inlineHelpText>
        <label>Authorised Person 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units (Authorised Person 2)</relationshipLabel>
        <relationshipName>Authorised_Person_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorised_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contractor&apos;s contact information.</inlineHelpText>
        <label>Authorised Person 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units (Authorised Person)</relationshipLabel>
        <relationshipName>Unit_Authorised_Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOH_Area_SQF__c</fullName>
        <label>BOH Area (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOH_Area_SQM__c</fullName>
        <formula>BOH_Area_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOH Area (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Meter_No__c</fullName>
        <externalId>true</externalId>
        <label>CT Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Space_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Executive</fullName>
                </value>
                <value>
                    <fullName>Twin Delux</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom Executive</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom Executive</fullName>
                </value>
                <value>
                    <fullName>All-Day Dining</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Lobby Lounge</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Patisserie/Gourmet Shop</fullName>
                </value>
                <value>
                    <fullName>Lounge</fullName>
                </value>
                <value>
                    <fullName>Ballroom</fullName>
                </value>
                <value>
                    <fullName>Function Room</fullName>
                </value>
                <value>
                    <fullName>Business Centre</fullName>
                </value>
                <value>
                    <fullName>Swimming Pool</fullName>
                </value>
                <value>
                    <fullName>Health Club</fullName>
                </value>
                <value>
                    <fullName>Adventure zone</fullName>
                </value>
                <value>
                    <fullName>Beauty Salon</fullName>
                </value>
                <value>
                    <fullName>Tennis Court</fullName>
                </value>
                <value>
                    <fullName>Other Recreation</fullName>
                </value>
                <value>
                    <fullName>Single Room</fullName>
                </value>
                <value>
                    <fullName>Double Room</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>Shop</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Deluxe</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuisine__c</fullName>
        <label>Cuisine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Space_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of space</description>
        <inlineHelpText>Description of space</inlineHelpText>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiency__c</fullName>
        <label>Efficiency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOH_Area_SQF__c</fullName>
        <label>FOH Area (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOH_Area_SQM__c</fullName>
        <formula>FOH_Area_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOH Area (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Plan__c</fullName>
        <label>Floor Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Floor Condition</description>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bare finish</fullName>
                </value>
                <value>
                    <fullName>Tiled finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Charge__c</fullName>
        <inlineHelpText>Please key in Forecast Charge for vacant unit</inlineHelpText>
        <label>Forecast Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Meter_No__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Please use &quot;;&quot; if more than one meter. (eg. xx123;xx124).</inlineHelpText>
        <label>Gas Meter No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_CheckList__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is an indicator that Takeover Checklist for this Unit has been generated with Line Items</inlineHelpText>
        <label>Generated CheckList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Lease_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Lease Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Hub__c</fullName>
        <inlineHelpText>A - Urban
B - Suburban
C - Others</inlineHelpText>
        <label>Group Hub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Horse_Power__c</fullName>
        <label>Horse Power</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Renovation_Period__c</fullName>
        <label>Last Renovation Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <label>LegacyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Level</label>
        <referenceTo>Level__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Loss__c</fullName>
        <label>Line Loss</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <label>Mobile Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NLA_SQF__c</fullName>
        <label>NLA (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLA_SQM__c</fullName>
        <formula>NLA_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NLA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <inlineHelpText>The No. of the Unit No.</inlineHelpText>
        <label>No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PDRs__c</fullName>
        <label>PDRs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partition__c</fullName>
        <description>Partition Condition</description>
        <label>Partition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Landlord&apos;s contact 2 information.</inlineHelpText>
        <label>Person In Charge 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units (Person In Charge 2)</relationshipLabel>
        <relationshipName>Person_In_Charge_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Landlord&apos;s contact 1 information.</inlineHelpText>
        <label>Person In Charge 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units (Operation In Charge)</relationshipLabel>
        <relationshipName>Units_Operation_In_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension_No__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Please use &quot;;&quot; if more than one extension no.. (eg. 1123;1124).</inlineHelpText>
        <label>Phone Extension No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Factor__c</fullName>
        <label>Power Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefunction_Area_SQF__c</fullName>
        <label>Prefunction Area (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefunction_Area_SQM__c</fullName>
        <formula>Prefunction_Area_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefunction Area (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_CT_Meter_End_Unit__c</fullName>
        <label>Previous Month CT Meter End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Sub_Meter_End_Unit__c</fullName>
        <label>Previous Month Sub Meter End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVPAR__c</fullName>
        <label>REVPAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renovation_Scope__c</fullName>
        <label>Renovation Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle_1__c</fullName>
        <label>Rent Hurdle 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle_2__c</fullName>
        <label>Rent Hurdle 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle_3__c</fullName>
        <label>Rent Hurdle 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle_Amount__c</fullName>
        <formula>Rent_Hurdle__c *  NLA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rent Hurdle Rate * NLA (SQF)</inlineHelpText>
        <label>Rent Hurdle Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle_Lower_Limit__c</fullName>
        <label>Rent Hurdle (Lower Limit)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle_Upper_Limit__c</fullName>
        <label>Rent Hurdle (Upper Limit)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle__c</fullName>
        <label>Rent Hurdle Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Budget_per_UOM__c</fullName>
        <label>Rental Budget per UOM</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_Size_SQF__c</fullName>
        <label>Room Size (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Size_SQM__c</fullName>
        <formula>Room_Size_SQF__c  / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Size (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seat_Ratio__c</fullName>
        <label>Seat Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shop_Front__c</fullName>
        <description>Shop Front Condition</description>
        <label>Shop Front</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Space_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Meter_No__c</fullName>
        <externalId>true</externalId>
        <label>Sub Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Space_Type__c</fullName>
        <label>Sub Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>F&amp;B</fullName>
                </value>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor Trolley</fullName>
                </value>
                <value>
                    <fullName>Push Cart</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Stalls</fullName>
                </value>
                <value>
                    <fullName>Vending Machine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Trade_Category_1__c</fullName>
        <label>Sub-Trade Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Trade_Category_2__c</fullName>
        <label>Sub-Trade Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trade_Category_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Trade_Category_3__c</fullName>
        <label>Sub-Trade Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trade_Category_3__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Trade_Category__c</fullName>
        <label>Sub-Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trade_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Takeover_Date__c</fullName>
        <label>Takeover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Rental__c</fullName>
        <formula>IF(UOM__c = &quot;Sq.ft&quot;, Rental_Budget_per_UOM__c *  NLA_SQF__c, Rental_Budget_per_UOM__c * NLA_SQM__c)</formula>
        <label>Target Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_GFA_SQF__c</fullName>
        <label>Total GFA (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_GFA_SQM__c</fullName>
        <formula>Total_GFA_SQF__c  / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total GFA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower/Block</label>
        <referenceTo>Tower_Block__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Category_1__c</fullName>
        <label>Trade Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Category_2__c</fullName>
        <label>Trade Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Category_3__c</fullName>
        <label>Trade Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Category__c</fullName>
        <label>Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_License__c</fullName>
        <description>License type information for casual leasing space</description>
        <inlineHelpText>License type information for casual leasing space</inlineHelpText>
        <label>Type of License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>TEXT(Property__r.UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Selling_Point__c</fullName>
        <label>Unique Selling Point</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <formula>&quot;#&quot;&amp; TEXT( Floor__c ) &amp;&quot;-&quot;&amp; IF( ISPICKVAL(  Space_Type__c  , &quot;ATM&quot;) , &quot;A&quot;, 
IF(ISPICKVAL(  Space_Type__c  , &quot;Storage&quot;), &quot;S&quot;, IF(ISPICKVAL (  Space_Type__c , &quot;Counter&quot;) , &quot;C&quot;, &quot;&quot;)) )&amp; No__c</formula>
        <label>Unit No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Meter_No__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Please use &quot;;&quot; if more than one meter. (eg. xx123;xx124).</inlineHelpText>
        <label>Water Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>AllJCUnits2</fullName>
        <columns>NAME</columns>
        <columns>Generate_CheckList__c</columns>
        <columns>Property__c</columns>
        <columns>Level__c</columns>
        <columns>NLA_SQF__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Takeover_Date__c</columns>
        <columns>CT_Meter_No__c</columns>
        <columns>Rental_Budget_per_UOM__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Junction City</value>
        </filters>
        <label>All JC Units</label>
    </listViews>
    <listViews>
        <fullName>AllUnits</fullName>
        <columns>NAME</columns>
        <columns>Generate_CheckList__c</columns>
        <columns>Property__c</columns>
        <columns>Level__c</columns>
        <columns>Takeover_Date__c</columns>
        <columns>CT_Meter_No__c</columns>
        <columns>Rental_Budget_per_UOM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Units</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUnits2</fullName>
        <columns>NAME</columns>
        <columns>Generate_CheckList__c</columns>
        <columns>Property__c</columns>
        <columns>Level__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Takeover_Date__c</columns>
        <columns>CT_Meter_No__c</columns>
        <columns>Rental_Budget_per_UOM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Units</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Newton_Mall</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Level__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Takeover_Date__c</columns>
        <columns>CT_Meter_No__c</columns>
        <columns>Rental_Budget_per_UOM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Newton</value>
        </filters>
        <label>Newton Mall</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Orchard_Mall</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Level__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Rental_Budget_per_UOM__c</columns>
        <columns>Takeover_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Orchard</value>
        </filters>
        <label>Orchard Mall</label>
    </listViews>
    <nameField>
        <label>Unit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mall</fullName>
        <active>true</active>
        <label>Mall</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office</fullName>
        <active>true</active>
        <label>Office</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enter_Unit_Name_in_case_of_FnB</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL(Space_Type__c,&quot;FB_Outlet&quot;),
ISBLANK ( Unit_Name__c ))</errorConditionFormula>
        <errorDisplayField>Unit_Name__c</errorDisplayField>
        <errorMessage>Please enter Unit Name</errorMessage>
    </validationRules>
</CustomObject>